--- a/style.css
+++ b/style.css
@@ -596,6 +596,32 @@ body {
 
 /* GALLERY LAYOUT */
 
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-auto-rows: 200px;
+  grid-auto-flow: dense;
+}
+
+.feature {
+  grid-column: 1 / -1;
+  grid-row: 1 / span 3;
+}
+
+.jumbo {
+  grid-column: 1 / span 2;
+  grid-row: 1 / span 2;
+}
+
+.wide {
+  grid-column: 1 / span 2;
+}
+
+.tall {
+  grid-column: 1 / span 1;
+  grid-row: 1 / span 2;
+}
+
 /* EVENT FORM */
 
 .event {
