--- a/style.css
+++ b/style.css
@@ -605,12 +605,12 @@ body {
 
 .feature {
   grid-column: 1 / -1;
-  grid-row: 1 / span 3;
+  grid-row: span 3;
 }
 
 .jumbo {
   grid-column: 1 / span 2;
-  grid-row: 1 / span 2;
+  grid-row: span 2;
 }
 
 .wide {
@@ -619,7 +619,7 @@ body {
 
 .tall {
   grid-column: 1 / span 1;
-  grid-row: 1 / span 2;
+  grid-row: span 2;
 }
 
 /* EVENT FORM */
