--- a/style.css
+++ b/style.css
@@ -698,3 +698,33 @@ body {
 }
 
 /* EVENT LAYOUT */
+
+.event-form {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.event-form__info {
+  flex: 1 1 425px;
+}
+
+.event-form__tip {
+  display: flex;
+  flex: 3 1 500px;
+  flex-direction: column;
+}
+
+.event-form__field {
+  display: flex;
+  flex-wrap: wrap;
+  flex: 1;
+}
+
+.event-form__input {
+  display: flex;
+  flex: 1 1 275px;
+}
+
+.event-form__submit {
+  align-self: flex-end;
+}
